--- a/transform_csv_to_parquet.ipynb
+++ b/transform_csv_to_parquet.ipynb
@@ -5,7 +5,24 @@
    "execution_count": 1,
    "id": "354bc1e7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: Ignoring non-Spark config property: viewsEnabled\n",
+      "WARNING: An illegal reflective access operation has occurred\n",
+      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/opt/anaconda3/lib/python3.9/site-packages/pyspark/jars/spark-unsafe_2.12-3.2.1.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
+      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
+      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
+      "WARNING: All illegal access operations will be denied in a future release\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "22/03/24 12:37:08 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy                 as np\n",
     "import pandas                as pd\n",
@@ -20,33 +37,7 @@
     "from pyspark.sql.functions   import *\n",
     "from pyspark.sql             import Window\n",
     "from pyspark.sql.types       import *\n",
-    "#from  pyspark.sql.functions import input_file_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "28f2f225",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "Java gateway process exited before sending its port number",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\AURELI~1.PAI\\AppData\\Local\\Temp/ipykernel_21236/4188510483.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m spark = (\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mSparkSession\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m         \u001b[1;33m.\u001b[0m\u001b[0mbuilder\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmaster\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'local[*]'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[1;33m.\u001b[0m\u001b[0mappName\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Churn'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[1;33m.\u001b[0m\u001b[0mconfig\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'spark.driver.memory'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'2g'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pyspark\\sql\\session.py\u001b[0m in \u001b[0;36mgetOrCreate\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    226\u001b[0m                             \u001b[0msparkConf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    227\u001b[0m                         \u001b[1;31m# This SparkContext may be an existing one.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 228\u001b[1;33m                         \u001b[0msc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSparkContext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetOrCreate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msparkConf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    229\u001b[0m                     \u001b[1;31m# Do not update `SparkConf` for existing `SparkContext`, as it's shared\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    230\u001b[0m                     \u001b[1;31m# by all sessions.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pyspark\\context.py\u001b[0m in \u001b[0;36mgetOrCreate\u001b[1;34m(cls, conf)\u001b[0m\n\u001b[0;32m    390\u001b[0m         \u001b[1;32mwith\u001b[0m \u001b[0mSparkContext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_lock\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    391\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mSparkContext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_active_spark_context\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 392\u001b[1;33m                 \u001b[0mSparkContext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mconf\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mSparkConf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    393\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mSparkContext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_active_spark_context\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    394\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pyspark\\context.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, master, appName, sparkHome, pyFiles, environment, batchSize, serializer, conf, gateway, jsc, profiler_cls)\u001b[0m\n\u001b[0;32m    142\u001b[0m                 \" is not allowed as it is a security risk.\")\n\u001b[0;32m    143\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 144\u001b[1;33m         \u001b[0mSparkContext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_ensure_initialized\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgateway\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mgateway\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mconf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    145\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    146\u001b[0m             self._do_init(master, appName, sparkHome, pyFiles, environment, batchSize, serializer,\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pyspark\\context.py\u001b[0m in \u001b[0;36m_ensure_initialized\u001b[1;34m(cls, instance, gateway, conf)\u001b[0m\n\u001b[0;32m    337\u001b[0m         \u001b[1;32mwith\u001b[0m \u001b[0mSparkContext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_lock\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    338\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mSparkContext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_gateway\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 339\u001b[1;33m                 \u001b[0mSparkContext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_gateway\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgateway\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mlaunch_gateway\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    340\u001b[0m                 \u001b[0mSparkContext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_jvm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSparkContext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_gateway\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjvm\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    341\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pyspark\\java_gateway.py\u001b[0m in \u001b[0;36mlaunch_gateway\u001b[1;34m(conf, popen_kwargs)\u001b[0m\n\u001b[0;32m    106\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    107\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misfile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconn_info_file\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 108\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Java gateway process exited before sending its port number\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    109\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    110\u001b[0m             \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconn_info_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"rb\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0minfo\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: Java gateway process exited before sending its port number"
-     ]
-    }
-   ],
-   "source": [
+    "\n",
     "spark = (\n",
     "    SparkSession\n",
     "        .builder.master('local[*]')\n",
@@ -64,39 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e94dcc1c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "customSchema = StructType([\n",
-    "                           StructField(\"Index\", StringType(), True),\n",
-    "                           StructField(\"Date\", DateType(), True), \n",
-    "                           StructField(\"IBGE_ID\", StringType(), True),\n",
-    "                           StructField(\"dewpoint_temperature\", DoubleType(), True), \n",
-    "                           StructField(\"humidity\", DoubleType(), True),\n",
-    "                           StructField(\"max_temperature\", DoubleType(), True), \n",
-    "                           StructField(\"min_temperature\", DoubleType(), True),\n",
-    "                           StructField(\"surface_pressure\", DoubleType(), True),\n",
-    "                           StructField(\"temperature\", DoubleType(), True),\n",
-    "                           StructField(\"total_precipitation\", DoubleType(), True), \n",
-    "                           StructField(\"u_component_of_wind_10m\", DoubleType(), True),\n",
-    "                           StructField(\"v_component_of_wind_10m\", DoubleType(), True),\n",
-    "                           StructField(\"geo\", DoubleType(), True),\n",
-    "                          ])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9fa95eb9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "df = (spark.read.format(\"csv\") \n",
     "      .option(\"header\", \"True\") \n",
-    "      #.schema(customSchema) \n",
-    "      .load('C:\\\\Users\\\\aureliano.paiva_tc\\\\Documents\\\\Dados_Agro\\\\*.csv') \n",
+    "      .load('../Agro/raw_data/*.csv') \n",
     "      .withColumn(\"filename\", input_file_name())\n",
     "    )\n",
     "\n",
@@ -107,31 +81,64 @@
     "                'u_component_of_wind_10m', 'v_component_of_wind_10m', \n",
     "                )\n",
     "\n",
-    "# df.drop_duplicates(subset=['Date']) # Não funciona"
+    "df = df.withColumnRenamed(\"RegionID\", \"CD_MUN\")\n",
+    "\n",
+    "df = df.withColumn('max_temperature_2m',df['max_temperature_2m'].cast(FloatType()))\n",
+    "df = df.withColumn('min_temperature_2m',df['min_temperature_2m'].cast(FloatType()))\n",
+    "df = df.withColumn('humidity',df['humidity'].cast(FloatType()))\n",
+    "df = df.withColumn('surface_pressure',df['surface_pressure'].cast(FloatType()))\n",
+    "df = df.withColumn('total_precipitation',df['total_precipitation'].cast(FloatType()))\n",
+    "df = df.withColumn('u_component_of_wind_10m',df['u_component_of_wind_10m'].cast(FloatType()))\n",
+    "df = df.withColumn('v_component_of_wind_10m',df['v_component_of_wind_10m'].cast(FloatType()))\n",
+    "\n",
+    "\n",
+    "d_para = (spark.read.format(\"csv\") \n",
+    "      .option(\"header\", \"True\") \n",
+    "      .load('../Agro/raw_data/de_para_IBGE.csv') \n",
+    "    )\n",
+    "\n",
+    "d_para = d_para.withColumn('CD_MUN',d_para['CD_MUN'].cast(StringType()))\n",
+    "\n",
+    "\n",
+    "df = (df.join(d_para, (df[\"CD_MUN\"] == d_para[\"CD_MUN\"]), how=\"inner\"))\n",
+    "\n",
+    "df = (df.groupby('SIGLA_UF','Date')\n",
+    "               .agg(F.mean(\"max_temperature_2m\").alias(\"max_temperature_2m\"),\n",
+    "                    F.mean(\"min_temperature_2m\").alias(\"min_temperature_2m\"),\n",
+    "                    F.mean(\"humidity\").alias(\"humidity\"),\n",
+    "                    F.mean(\"surface_pressure\").alias(\"surface_pressure\"),\n",
+    "                    F.mean(\"total_precipitation\").alias(\"total_precipitation\"),\n",
+    "                    F.mean(\"u_component_of_wind_10m\").alias(\"u_component_of_wind_10m\"),\n",
+    "                    F.mean(\"v_component_of_wind_10m\").alias(\"v_component_of_wind_10m\")\n",
+    "                   )\n",
+    "    )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "42b8b9ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "22/03/24 12:39:10 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
+      " Header: NM_MUN, SIGLA_UF, , , , , , , \n",
+      " Schema: Date, RegionID, humidity, max_temperature_2m, min_temperature_2m, surface_pressure, total_precipitation, u_component_of_wind_10m, v_component_of_wind_10m\n",
+      "Expected: Date but found: NM_MUN\n",
+      "CSV file: file:///Users/aurelianosancho/Documents/Agro/raw_data/de_para_IBGE.csv\n",
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "(\n",
     "    df.write.format(\"parquet\")\n",
-    "    .mode(\"overwrite\")\n",
-    "    .save(\"C:\\\\Users\\\\aureliano.paiva_tc\\\\Documents\\\\GitHub\\\\Clima_Agro\\\\raw_data\\\\clima_Agro.parquet\")\n",
+    "    #.mode(\"overwrite\")\n",
+    "    .save(\"../Agro/raw_data/clima_Agro.parquet\")\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4148b6dc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fim"
    ]
   }
  ],
