--- a/transform_csv_to_parquet.ipynb
+++ b/transform_csv_to_parquet.ipynb
@@ -2,27 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "354bc1e7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning: Ignoring non-Spark config property: viewsEnabled\n",
-      "WARNING: An illegal reflective access operation has occurred\n",
-      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/opt/anaconda3/lib/python3.9/site-packages/pyspark/jars/spark-unsafe_2.12-3.2.1.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
-      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
-      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
-      "WARNING: All illegal access operations will be denied in a future release\n",
-      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "22/03/24 12:37:08 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy                 as np\n",
     "import pandas                as pd\n",
@@ -55,18 +38,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9fa95eb9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = (spark.read.format(\"csv\") \n",
     "      .option(\"header\", \"True\") \n",
@@ -83,6 +58,7 @@
     "\n",
     "df = df.withColumnRenamed(\"RegionID\", \"CD_MUN\")\n",
     "\n",
+    "df = df.withColumn('temperature_2m',df['temperature_2m'].cast(FloatType()))\n",
     "df = df.withColumn('max_temperature_2m',df['max_temperature_2m'].cast(FloatType()))\n",
     "df = df.withColumn('min_temperature_2m',df['min_temperature_2m'].cast(FloatType()))\n",
     "df = df.withColumn('humidity',df['humidity'].cast(FloatType()))\n",
@@ -90,6 +66,7 @@
     "df = df.withColumn('total_precipitation',df['total_precipitation'].cast(FloatType()))\n",
     "df = df.withColumn('u_component_of_wind_10m',df['u_component_of_wind_10m'].cast(FloatType()))\n",
     "df = df.withColumn('v_component_of_wind_10m',df['v_component_of_wind_10m'].cast(FloatType()))\n",
+    "\n",
     "\n",
     "\n",
     "d_para = (spark.read.format(\"csv\") \n",
@@ -103,7 +80,8 @@
     "df = (df.join(d_para, (df[\"CD_MUN\"] == d_para[\"CD_MUN\"]), how=\"inner\"))\n",
     "\n",
     "df = (df.groupby('SIGLA_UF','Date')\n",
-    "               .agg(F.mean(\"max_temperature_2m\").alias(\"max_temperature_2m\"),\n",
+    "               .agg(F.mean(\"temperature_2m\").alias(\"temperature_2m\"),\n",
+    "                    F.mean(\"max_temperature_2m\").alias(\"max_temperature_2m\"),\n",
     "                    F.mean(\"min_temperature_2m\").alias(\"min_temperature_2m\"),\n",
     "                    F.mean(\"humidity\").alias(\"humidity\"),\n",
     "                    F.mean(\"surface_pressure\").alias(\"surface_pressure\"),\n",
@@ -111,35 +89,34 @@
     "                    F.mean(\"u_component_of_wind_10m\").alias(\"u_component_of_wind_10m\"),\n",
     "                    F.mean(\"v_component_of_wind_10m\").alias(\"v_component_of_wind_10m\")\n",
     "                   )\n",
-    "    )\n"
+    "    )\n",
+    "\n",
+    "df = df.withColumn('temperature_2m', col('temperature_2m') - lit(273.15))\n",
+    "df = df.withColumn('max_temperature_2m', col('max_temperature_2m') - lit(273.15))\n",
+    "df = df.withColumn('min_temperature_2m', col('min_temperature_2m') - lit(273.15))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "42b8b9ed",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "22/03/24 12:39:10 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: NM_MUN, SIGLA_UF, , , , , , , \n",
-      " Schema: Date, RegionID, humidity, max_temperature_2m, min_temperature_2m, surface_pressure, total_precipitation, u_component_of_wind_10m, v_component_of_wind_10m\n",
-      "Expected: Date but found: NM_MUN\n",
-      "CSV file: file:///Users/aurelianosancho/Documents/Agro/raw_data/de_para_IBGE.csv\n",
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "(\n",
     "    df.write.format(\"parquet\")\n",
-    "    #.mode(\"overwrite\")\n",
+    "    .mode(\"overwrite\")\n",
     "    .save(\"../Agro/raw_data/clima_Agro.parquet\")\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "978ee67b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
